# nrf52840-m2-devkit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  setup-env.sh  sitemap.xml  west.yml
.github/workflows/: gh-pages.yml
CONTRIBUTING/: index.html
LICENSE/: index.html
config/: nrf52840_m2.h
docs/: CONTRIBUTING.md  LICENSE.md  getting-started.md  index.md  power-profiling.md  programming.md  resources.md  where-to-buy.md
docs/nrf5-sdk/: building.md  index.md  setup.md
docs/python/: index.md  install.md
docs/zephyr/: building.md  index.md  setup.md
examples/nrf5-sdk/: Makefile
examples/python/: benchmark.py  ble_keyboard.py  blinky.py  button.py  display.py  sd_card.py  usb_keyboard.py
examples/zephyr/: Makefile
examples/zephyr/lvgl/: CMakeLists.txt  prj.conf
examples/zephyr/lvgl/hex/: lvgl_nrf52840_m2_zephyr-v2.3.0-1-ge77985a2f053.hex  lvgl_nrf52840_m2_zephyr.hex
examples/zephyr/lvgl/src/: main.c
firmware/: nrf52840_m2_devkit_circuitpython_5.3.0.hex  uf2_bootloader_0xF4000_20200608.hex
firmware/python/: nrf52840_m2_devkit_circuitpython_5.3.0.hex
getting-started/: index.html
nrf5-sdk/: index.html
nrf5-sdk/building/: index.html
nrf5-sdk/setup/: index.html
nrf_sdks/: README.md
power-profiling/: index.html
programming/: index.html
python/: index.html
python/examples/: index.html
python/install/: index.html
resources/: index.html
search/: search_index.json
tools/: monitor.py
where-to-buy/: index.html
zephyr/: index.html
zephyr/building/: index.html
zephyr/examples/: index.html
zephyr/setup/: index.html
(+266 files in other folders)
